--- a/force-app/main/default/classes/LeadProcessorTest.cls
+++ b/force-app/main/default/classes/LeadProcessorTest.cls
@@ -1,54 +1,24 @@
 @isTest
-public without sharing class LeadProcessorTest {
-
-    @IsTest
-    static void testProcess() {
-        // Create test data
+private class LeadProcessorTest {
+    
+    @isTest
+    private static void testBatchClass() {
+        
+        // Load test data
         List<Lead> leads = new List<Lead>();
-        for (Integer i = 0; i < 300; i++) {
-            leads.add(new Lead(FirstName = 'Test', LastName = 'Lead' + i, Company = 'Test Company', LeadSource = 'Web'));
+        for (Integer i=0; i<200; i++) {
+            leads.add(new Lead(LastName='Connock', Company='Salesforce'));
         }
         insert leads;
-
-        // Create an instance of the LeadProcessor class
-        LeadProcessor processor = new LeadProcessor();
-
-        // Call the process method
-        Database.BatchableContext context = new Database.BatchableContextStub();
-        processor.process(context, leads);
-
-        // Verify that the lead source was updated
-        List<Lead> updatedLeads = [SELECT Id, LeadSource FROM Lead WHERE LeadSource = 'Dreamforce'];
-        System.assertEquals(200, updatedLeads.size(), 'All leads should have been updated to Dreamforce');
+        
+        // Perform the test
+        Test.startTest();
+        LeadProcessor lp = new LeadProcessor();
+        Id batchId = Database.executeBatch(lp, 200);
+        Test.stopTest();
+        
+        // Check the result
+        List<Lead> updatedLeads = [SELECT Id FROM Lead WHERE LeadSource = 'Dreamforce'];
+        System.assertEquals(200, updatedLeads.size(), 'ERROR: At least 1 Lead record not updated correctly');
     }
-
-public static void testStart() {
-    LeadProcessor lp = new LeadProcessor();
-    Database.QueryLocator ql = lp.start(null);
-    System.assert(ql != null, 'QueryLocator should not be null');
-}
-
-public static void test() {
-    Test.startTest();
-    LeadProcessor lp = new LeadProcessor();
-    Id batchId = Database.executeBatch(lp);
-    Test.stopTest();
-    System.assertEquals(200, [SELECT count() FROM Lead WHERE LeadSource = 'Dreamforce']);
-}
-
-static void testFinish() {
-    // Create a batchable context for testing
-    Database.BatchableContext bc = new BatchableContextStub();
-
-    // Create an instance of the LeadProcessor class
-    LeadProcessor processor = new LeadProcessor();
-
-    // Call the finish method
-    processor.finish(bc);
-
-    // Add assertions or checks if needed
-    // For example, you can check if a log entry was created
-    List<ApexLog> logs = [SELECT Id, Status FROM ApexLog WHERE LogUserId = :UserInfo.getUserId()];
-    System.assertEquals(1, logs.size(), 'Expected one log entry to be created');
-}
 }
